✨ feat: Publish message to mq

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,6 @@
-REQRES_API_BASE=https://reqres.in/api
+REQRES_API_BASE=https://reqres.in
+MONGODB_URL=mongodb://localhost/nest
+RABBITMQ_URL=amqp://localhost:5672
+RABBITMQ_EXCHANGE_NAME=exchange-name
+RABBITMQ_EXCHANGE_TYPE=topic
+RABBITMQ_ROUTING_KEY=routing-key
