--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.13",
     "@types/joi": "^17.2.3",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
@@ -48,6 +48,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "faker": "5.5.3",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
